<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.todociber.hesidohackeado.DetalleResultado"
    tools:showIn="@layout/activity_detalle_resultado">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/negro"
                android:text="@string/detalles_de_la_fuga_de_seguridad"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/avatar"/>

            <!-- Detalles comienzan aqui   -->



            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/negro"
                        android:layout_weight="0.62"
                        android:text="@string/servidor_atacado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/Titulo"
                        android:textColor="@color/azul"
                        android:layout_weight="0.5"
                        android:text="000webhost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </LinearLayout>





            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/negro"
                        android:layout_weight="0.62"
                        android:text="@string/fecha_de_registro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/FechaRegistro"
                        android:textColor="@color/azul"
                        android:layout_weight="0.5"
                        android:text="000webhost"
                        android:textSize="12dp"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/negro"
                        android:layout_weight="0.64"
                        android:text="@string/fecha_del_ataque"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/FechaDeAtaque"
                        android:textColor="@color/azul"
                        android:textSize="12dp"
                        android:textStyle="italic"
                        android:layout_weight="0.5"
                        android:text="000webhost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/negro"
                        android:layout_weight="0.5"
                        android:text="@string/numero_de_email_afectados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/NumeroDeEmails"
                        android:textColor="@color/azul"
                        android:layout_weight="0.5"
                        android:text="000webhost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/negro"
                        android:layout_weight="0.63"
                        android:text="@string/ataque_verificado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />



                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/verificado"
                        android:textColor="@color/azul"
                        android:layout_weight="0.5"
                        android:text="000webhost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/negro"
                        android:layout_weight="0.65"
                        android:text="@string/autor_del_ataque"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/autor"
                        android:textColor="@color/azul"
                        android:layout_weight="0.5"
                        android:text="000webhost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                        <LinearLayout
                            android:id="@+id/btnDetalles"
                            android:elevation="10dp"
                            android:background="@color/verde"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true">
                            <TextView
                                android:layout_margin="10dp"
                                android:textColor="@color/blanco"
                                android:text="@string/ver_mas_detalles"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>





            </RelativeLayout>

        </LinearLayout>





    </ScrollView>






</LinearLayout>
